another frame test

--- a/LigminchaGlobalApp/test.html
+++ b/LigminchaGlobalApp/test.html
@@ -6,7 +6,7 @@
 		</script>
 	</head>
 	<body>
-<iframe id="g_tb_if" name="g_tb_if" src="http://ligminchaglobal.organicdesign.co.nz/toolbar.php?parent=http%3A%2F%2Flocalhost%2F" frameborder="1" width="100" height="100"></iframe>
+<iframe id="g_tb_if" name="g_tb_if" src="http://ligminchaglobal.organicdesign.co.nz/frame.html" frameborder="1" width="100" height="100"></iframe>
 <div id="g_tb" style="position:absolute;z-index:1000;top:-28px;left:0;width:100%;height:28px;"><div id="lg-toolbar"></div></div>
 	</body>
 </html>
