--- a/LigminchaGlobalApp/frame.html
+++ b/LigminchaGlobalApp/frame.html
@@ -6,14 +6,14 @@
 	</head>
 	<body>
 		<!-- Scripts -->
-		<script type="text/javascript" src="resources/fakemediawiki.js"><!-- Make MediaWiki environment look present for websocket.js --></script>
+		<script type="text/javascript" src="/resources/fakemediawiki.js"><!-- Make MediaWiki environment look present for websocket.js --></script>
 		<script type="text/javascript">
 			<!-- Information added dynamically by the PHP -->			
 			window.mw.data.wgServer='http://ligminchaglobal.organicdesign.co.nz';
 			window.mw.data.wsPort='1729';
 			window.mw.data.wsRewrite='1';
-		<script type="text/javascript" src="resources/jquery.js"></script>
-		<script type="text/javascript" src="resources/WebSocket/websocket.js"><!-- WebSocket object from the MediaWiki WebSockets extension --></script>
+		<script type="text/javascript" src="/resources/jquery.js"></script>
+		<script type="text/javascript" src="/resources/WebSocket/websocket.js"><!-- WebSocket object from the MediaWiki WebSockets extension --></script>
 		<script type="text/javascript">
 			mw.data.wsClientID = 'foo:bar';
 
