--- a/LigminchaGlobalApp/frame.html
+++ b/LigminchaGlobalApp/frame.html
@@ -12,6 +12,7 @@
 			window.mw.data.wgServer='http://ligminchaglobal.organicdesign.co.nz';
 			window.mw.data.wsPort='1729';
 			window.mw.data.wsRewrite='1';
+		</script>
 		<script type="text/javascript" src="/resources/jquery.js"></script>
 		<script type="text/javascript" src="/resources/WebSocket/websocket.js"><!-- WebSocket object from the MediaWiki WebSockets extension --></script>
 		<script type="text/javascript">
